# hydra-dh-launcher

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test_release.yml
example/: config.yaml  my_app.py
hydra_plugins/hydra_dh_launcher/: __init__.py  _core.py  config.py  dh_launcher.py
tests/: __init__.py  test_dh_launcher.py
